--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc: ^8.1.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
